--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
 version: '2'
 services:
-  echo-service:
-    image: echo-service
-    depends_on:
-     - eureka-server
-  eureka-server:
-    image: eureka-server
+  mongodb:
+#    container_name: mongodb
+    image: mongo
     ports:
-     - "8761:8761"
-  zuul-server:
-    image: zuul-server
-    depends_on:
-     - eureka-server
+      - "27017:27017"
+  web:
+    image: springbootmongo
+    depends_on: # schools-datastore will be started before the schools-service
+      - mongodb
     ports:
-     - "9090:9090"
+      - "8080:8080"
+    command: docker run --name springdb --link techmongo:mongo -d springbootmongo
+    command: docker run -it --link some-mongo:mongo --rm mongo sh -c 'exec mongo "$MONGO_PORT_27017_TCP_ADDR:$MONGO_PORT_27017_TCP_PORT/test"'
