--- a/sample-hystrix-monitor/src/main/resources/bootstrap.yml
+++ b/sample-hystrix-monitor/src/main/resources/bootstrap.yml
@@ -12,4 +12,4 @@ eureka:
     nonSecurePort: ${server.port:8989}
   client:
     serviceUrl:
-      defaultZone: http://${eureka.host:localhost}:${eureka.port:8761}/eureka/
+      defaultZone: ${eurekahost}/eureka/
